[package]
name = "gugugu-rust-example"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde_json = "1.0"
http = "0.2"

[dependencies.hyper]
version = "0.14"
features = ["http1", "tcp", "client", "server"]

[dependencies.tokio]
version = "1.36"
features = ["rt-multi-thread", "io-std", "io-util"]
